<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:title="@string/home"/>

    <item android:id="@+id/nav_devotion"
        android:title="@string/daily_devotion"/>

    <item android:id="@+id/nav_announcements"
        android:title="@string/announcements"/>

    <item android:id="@+id/nav_events"
        android:title="@string/events"/>

    <item android:id="@+id/nav_live_radio"
        android:title="@string/live_radio"/>

    <item android:id="@+id/nav_live_video"
        android:title="@string/live_video"/>

    <item android:id="@+id/nav_podcast"
        android:title="@string/podcast"/>

    <item android:id="@+id/nav_contact_us"
        android:title="@string/contact_us"/>

    <item android:id="@+id/nav_about_us"
        android:title="@string/about_us"/>

</menu>