<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cont_item_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardElevation="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_of_entity"/>

            <TextView
                android:id="@+id/name_of_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileImage"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/name"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pos_of_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_of_person"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/title"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pos_of_person"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/about"
                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dp"
                android:ellipsize="end"
                android:hint="@string/content"
                android:lines="3"
                android:textColor="#000"
                android:textSize="14sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>