<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="@drawable/indigo_cyan"
    android:id="@+id/NavHeader"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logojem2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:text="@string/jonathan_ekuban_ministries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:id="@+id/username_txt"
        android:textColor="#fff"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_below="@+id/profilePic"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/springs_of_life_chapel_international"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_txt"
        android:layout_centerHorizontal="true"
        android:id="@+id/email_address_txt"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>