<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:scrollbarTrackHorizontal="@color/colorBar2"
    android:scrollbars="vertical"
    tools:context="com.studiolabs.media.jem.views.login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logojem3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginRight="10dp"
                android:background="#dd4b39"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_dialpad_black_24dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Sign Up with Google+"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="11sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#3b5998"
                android:drawableRight="@drawable/ic_rss_feed_black_24dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Sign Up with Facebook"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/email_address"
            android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/email_eT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#fff"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/password_eT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#fff"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColor="#000" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#403737"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bypass_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/bypass"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </LinearLayout>
</ScrollView>