<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cont_item_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="2dp"
        card_view:elevation="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/eventImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/image_of_entity"
                android:src="@drawable/loading"
                app:civ_border_color="#00000000"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@+id/eventImage"
                android:layout_toRightOf="@+id/eventImage"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/event_title"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/event_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/event_details"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp"
                    android:columnCount="3"
                    android:orientation="horizontal"
                    android:rowCount="2">

                    <TextView
                        android:id="@+id/event_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_gravity="fill"
                        android:layout_marginEnd="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_row="1"
                        android:drawableLeft="@drawable/ic_date_range_black_24dp"
                        android:drawablePadding="2dp"
                        android:drawableStart="@drawable/ic_date_range_black_24dp"
                        android:gravity="center_vertical"
                        android:text="Date"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/event_venue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_gravity="fill"
                        android:layout_marginEnd="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_row="1"
                        android:drawableLeft="@drawable/ic_pin_drop_black_24dp"
                        android:drawablePadding="2dp"
                        android:drawableStart="@drawable/ic_pin_drop_black_24dp"
                        android:gravity="center_vertical"
                        android:text="Venue"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/event_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_gravity="fill"
                        android:layout_marginEnd="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_row="1"
                        android:drawableLeft="@drawable/ic_access_time_black_24dp"
                        android:drawablePadding="2dp"
                        android:drawableStart="@drawable/ic_access_time_black_24dp"
                        android:gravity="center_vertical"
                        android:text="Time"
                        android:textSize="11sp" />
                </GridLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>